# hyf

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/hyf_bitchat_core/: Cargo.toml
crates/hyf_bridge_bitchat/: Cargo.toml
crates/hyf_bridge_bitchat/src/: convert.rs  error.rs  lib.rs  params.rs
crates/hyf_bridge_core/: Cargo.toml
crates/hyf_bridge_core/src/: codec.rs  constants.rs  error.rs  lib.rs  types.rs  wrap.rs
crates/hyf_bridge_lxmf/: Cargo.toml
crates/hyf_bridge_lxmf/src/: convert.rs  error.rs  lib.rs  params.rs
crates/hyf_bridge_nostr/: Cargo.toml
crates/hyf_bridge_nostr/src/: content.rs  error.rs  event.rs  lib.rs
crates/hyf_bridge_runtime/: Cargo.toml
crates/hyf_bridge_runtime/src/: command.rs  dedupe.rs  error.rs  lib.rs  orchestrator.rs  policy.rs  types.rs
crates/hyf_config/: Cargo.toml
crates/hyf_config/src/: config.rs  error.rs  lib.rs
crates/hyf_core/: Cargo.toml
crates/hyf_crypto/: Cargo.toml
crates/hyf_gateway/: Cargo.toml
crates/hyf_gateway/src/: core.rs  error.rs  fips.rs  lib.rs  metrics.rs  nostr.rs  runtime.rs
crates/hyf_gateway/tests/: bitchat_carrier_smoke.rs  bridge_room_smoke.rs  bridge_runtime_smoke.rs  fips_sidecar_smoke.rs  gateway_smoke.rs  lxmf_carrier_smoke.rs  nostr_uplink_smoke.rs  rnode_serial_smoke.rs
crates/hyf_link/: Cargo.toml
crates/hyf_link_bitchat/: Cargo.toml
crates/hyf_link_bitchat/src/: error.rs  lib.rs  params.rs  wrap.rs
crates/hyf_link_fips/: Cargo.toml
crates/hyf_link_fips/src/: constants.rs  control.rs  datagram.rs  error.rs  fake_sidecar.rs  identity.rs  lib.rs
crates/hyf_link_kiss/: Cargo.toml
crates/hyf_link_loopback/: Cargo.toml
crates/hyf_link_loopback/src/: error.rs  lib.rs  loopback.rs
crates/hyf_link_lxmf/: Cargo.toml
crates/hyf_link_lxmf/src/: error.rs  lib.rs  params.rs  wrap.rs
crates/hyf_link_nostr/: Cargo.toml
crates/hyf_link_nostr/src/: canonical.rs  constants.rs  content.rs  error.rs  event.rs  fake_relay.rs  filter.rs  hex.rs  hyf.rs  keys.rs  lib.rs  messages.rs  signing.rs  signing_spike.rs  status.rs  stored.rs  stored_event.rs
crates/hyf_link_rnode/: Cargo.toml
crates/hyf_link_rnode/src/: command.rs  config.rs  constants.rs  error.rs  hil.rs  lib.rs  state.rs
crates/hyf_link_rnode/tests/: hil_rnode.rs
crates/hyf_link_rnode_serial/: Cargo.toml
crates/hyf_link_rnode_serial/src/: config.rs  error.rs  event.rs  io.rs  lib.rs  link.rs
crates/hyf_link_rnode_serial/tests/: hil_rnode_serial.rs
crates/hyf_link_rns/: Cargo.toml
crates/hyf_link_rns/src/: error.rs  lib.rs  packet.rs  wrap.rs
crates/hyf_lxmf_core/: Cargo.toml
crates/hyf_lxmf_core/src/: constants.rs  error.rs  hash.rs  lib.rs  message.rs  msgpack.rs  payload.rs  types.rs
crates/hyf_rns_conformance/: Cargo.toml
crates/hyf_rns_conformance/benches/: profile0.rs  profile1_link.rs  profile2_crypto.rs
crates/hyf_rns_conformance/src/: benchmark_inputs.rs  final_report.rs  fixtures.rs  lib.rs  profile0.rs  profile1.rs  profile2.rs  report.rs  runner.rs
crates/hyf_rns_conformance/tests/: announce_vectors.rs  destination_hash_vectors.rs  fixture_manifest.rs  identity_vectors.rs  packet_hash_vectors.rs  packet_header_vectors.rs  profile12_api.rs  profile1_kiss_vectors.rs  profile1_rnode_vectors.rs  profile2_crypto_vectors.rs  python_oracle_vectors.rs  rns_oracle_tool.rs  workspace_metadata.rs
crates/hyf_rns_conformance/tests/support/: mod.rs
crates/hyf_rns_core/: Cargo.toml
crates/hyf_rns_crypto/: Cargo.toml
crates/hyf_rns_crypto/src/: error.rs  hkdf.rs  identity.rs  lib.rs  pkcs7.rs  signing.rs  single_packet.rs  token.rs
crates/hyf_rns_wire/: Cargo.toml
crates/hyf_rns_wire/src/: announce.rs  context.rs  error.rs  flags.rs  ifac.rs  lib.rs  packet.rs  packet_hash.rs
crates/hyf_rns_wire/tests/: packet_hot_path_allocations.rs
crates/hyf_router/: Cargo.toml
crates/hyf_store/: Cargo.toml
crates/hyf_store/src/: command.rs  error.rs  lib.rs  policy.rs  store.rs
crates/hyf_wire/: Cargo.toml
docs/adr/: 0003-gateway-foundation.md  0004-fips-gateway-sidecar-integration.md  0005-rnode-serial-gateway-path.md  0006-explicit-rns-packet-mode.md  0007-nostr-uplink.md  0008-hyf-nostr-event-kind.md  0009-fake-relay-no-public-defaults.md  0010-nip01-canonicalization.md  0011-fips-fake-sidecar-carrier.md  0012-fips-identity-addressing.md  0013-no-fips-runtime-dependency.md  0014-fips-control-fixtures.md
docs/architecture/: fips_sidecar.md  gateway_foundation.md  nostr_uplink.md  rnode_gateway_path.md
docs/evidence/: gateway_foundation.md  handoff_3_gateway_poc_v1.md
docs/integrations/: fips.md
docs/verification/: fips_sidecar.md  handoff4.md  local_validation.md  nostr_uplink.md
fuzz/: Cargo.toml  copy_tracked_corpus.sh
fuzz/corpus/fuzz_bitchat_packet_decode/: compressed_structural  reserved_flags  v1_plain  v2_plain  v2_route
fuzz/corpus/fuzz_ifac_verify/: valid_masked_packet
fuzz/corpus/fuzz_kiss_decoder/: escaped_data_frame
fuzz/corpus/fuzz_lxmf_message_decode/: full_message4  full_message5
fuzz/corpus/fuzz_rnode_command_parser/: rx_stat_frame
fuzz/corpus/fuzz_rns_announce_decode/: negative_context_flag  negative_destination  valid_app_data  valid_no_app_data
fuzz/corpus/fuzz_rns_packet_decode/: header1_packet  header2_packet
fuzz/corpus/fuzz_rns_packet_hash/: header1_packet  header2_transport_a  header2_transport_b
fuzz/corpus/fuzz_single_packet_decrypt/: valid_ciphertext_token
fuzz/corpus/fuzz_token_decrypt/: basic_token
fuzz/fuzz_targets/: fuzz_bitchat_packet_decode.rs  fuzz_ifac_verify.rs  fuzz_kiss_decoder.rs  fuzz_lxmf_message_decode.rs  fuzz_rnode_command_parser.rs  fuzz_rns_announce_decode.rs  fuzz_rns_packet_decode.rs  fuzz_rns_packet_hash.rs  fuzz_single_packet_decrypt.rs  fuzz_token_decrypt.rs  seed_input.rs
fuzz/src/: lib.rs  seed_input.rs
schemas/: conformance_run.schema.json  conformance_run_profile0_final.schema.json  rnode_hil_manifest.schema.json
scripts/: verify_handoff3.sh  verify_handoff4.sh  verify_handoff5.sh  verify_profile0.sh
(+61 files in other folders)
