[workspace]
resolver = "2"
members = [
    "crates/hyf_core",
    "crates/hyf_crypto",
    "crates/hyf_wire",
    "crates/hyf_link",
    "crates/hyf_rns_core",
    "crates/hyf_rns_crypto",
    "crates/hyf_rns_wire",
    "crates/hyf_rns_conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tyson Lupul <tyson@radroots.org>"]
readme = "README.md"
repository = "https://github.com/hyfmesh/hyf"
rust-version = "1.92.0"

[workspace.dependencies]
hyf_core = { path = "crates/hyf_core" }
hyf_crypto = { path = "crates/hyf_crypto" }
hyf_wire = { path = "crates/hyf_wire" }
hyf_link = { path = "crates/hyf_link" }
hyf_rns_core = { path = "crates/hyf_rns_core" }
hyf_rns_crypto = { path = "crates/hyf_rns_crypto" }
hyf_rns_wire = { path = "crates/hyf_rns_wire" }
hyf_rns_conformance = { path = "crates/hyf_rns_conformance" }
sha2 = { version = "0.10.9", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
