[workspace]
resolver = "2"
members = [
    "crates/hyf_core",
    "crates/hyf_crypto",
    "crates/hyf_wire",
    "crates/hyf_link",
    "crates/hyf_rns_core",
    "crates/hyf_rns_crypto",
    "crates/hyf_rns_wire",
    "crates/hyf_rns_conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tyson Lupul <tyson@radroots.org>"]
readme = "README.md"
repository = "https://github.com/hyfmesh/hyf"
rust-version = "1.92.0"

[workspace.dependencies]
hyf_core = { path = "crates/hyf_core" }
hyf_crypto = { path = "crates/hyf_crypto" }
hyf_wire = { path = "crates/hyf_wire" }
hyf_link = { path = "crates/hyf_link" }
hyf_rns_core = { path = "crates/hyf_rns_core" }
hyf_rns_crypto = { path = "crates/hyf_rns_crypto" }
hyf_rns_wire = { path = "crates/hyf_rns_wire" }
hyf_rns_conformance = { path = "crates/hyf_rns_conformance" }
allocation-counter = { version = "=0.8.1" }
criterion = { version = "=0.8.2", default-features = false, features = ["cargo_bench_support"] }
ed25519-dalek = { version = "=3.0.0", default-features = false, features = ["zeroize"] }
rand_core = { version = "=0.10.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = { version = "0.10.9", default-features = false }
x25519-dalek = { version = "=3.0.0", default-features = false, features = ["static_secrets", "zeroize"] }
zeroize = { version = "=1.9.0", default-features = false, features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
