[workspace]
resolver = "2"
members = [
    "crates/hyf_core",
    "crates/hyf_crypto",
    "crates/hyf_wire",
    "crates/hyf_link",
    "crates/hyf_store",
    "crates/hyf_router",
    "crates/hyf_link_loopback",
    "crates/hyf_config",
    "crates/hyf_gateway",
    "crates/hyf_link_kiss",
    "crates/hyf_link_rnode",
    "crates/hyf_link_rns",
    "crates/hyf_link_nostr",
    "crates/hyf_link_rnode_serial",
    "crates/hyf_rns_core",
    "crates/hyf_rns_crypto",
    "crates/hyf_rns_wire",
    "crates/hyf_rns_conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tyson Lupul <tyson@radroots.org>"]
readme = "README.md"
repository = "https://github.com/hyfmesh/hyf"
rust-version = "1.92.0"

[workspace.dependencies]
hyf_core = { path = "crates/hyf_core", default-features = false }
hyf_crypto = { path = "crates/hyf_crypto", default-features = false }
hyf_wire = { path = "crates/hyf_wire", default-features = false }
hyf_link = { path = "crates/hyf_link", default-features = false }
hyf_store = { path = "crates/hyf_store", default-features = false }
hyf_router = { path = "crates/hyf_router", default-features = false }
hyf_link_loopback = { path = "crates/hyf_link_loopback", default-features = false }
hyf_config = { path = "crates/hyf_config", default-features = false }
hyf_gateway = { path = "crates/hyf_gateway", default-features = false }
hyf_link_kiss = { path = "crates/hyf_link_kiss", default-features = false }
hyf_link_rnode = { path = "crates/hyf_link_rnode", default-features = false }
hyf_link_rns = { path = "crates/hyf_link_rns", default-features = false }
hyf_link_nostr = { path = "crates/hyf_link_nostr", default-features = false }
hyf_link_rnode_serial = { path = "crates/hyf_link_rnode_serial", default-features = false }
hyf_rns_core = { path = "crates/hyf_rns_core", default-features = false }
hyf_rns_crypto = { path = "crates/hyf_rns_crypto", default-features = false }
hyf_rns_wire = { path = "crates/hyf_rns_wire", default-features = false }
hyf_rns_conformance = { path = "crates/hyf_rns_conformance", default-features = false }
allocation-counter = { version = "=0.8.1", default-features = false }
aes = { version = "=0.9.1", default-features = false, features = ["zeroize"] }
cbc = { version = "=0.2.1", default-features = false, features = ["block-padding", "zeroize"] }
cipher = { version = "=0.5.2", default-features = false, features = ["block-padding", "zeroize"] }
criterion = { version = "=0.8.2", default-features = false, features = ["cargo_bench_support"] }
ed25519-dalek = { version = "=3.0.0", default-features = false, features = ["zeroize"] }
hkdf = { version = "=0.13.0", default-features = false }
hmac = { version = "=0.13.0", default-features = false }
k256 = { version = "=0.14.0", default-features = false, features = ["schnorr"] }
rand_core = { version = "=0.10.1", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }
serialport = { version = "=4.9.0", default-features = false }
sha2 = { version = "=0.11.0", default-features = false }
x25519-dalek = { version = "=3.0.0", default-features = false, features = ["static_secrets", "zeroize"] }
zeroize = { version = "=1.9.0", default-features = false, features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
