[package]
name = "hyf-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
hyf_link_kiss = { path = "../crates/hyf_link_kiss", default-features = false }
hyf_link_rnode = { path = "../crates/hyf_link_rnode", default-features = false }
hyf_lxmf_core = { path = "../crates/hyf_lxmf_core", default-features = false }
hyf_rns_core = { path = "../crates/hyf_rns_core", default-features = false }
hyf_rns_crypto = { path = "../crates/hyf_rns_crypto", default-features = false, features = ["crypto_x25519"] }
hyf_rns_wire = { path = "../crates/hyf_rns_wire", default-features = false, features = ["ifac"] }
libfuzzer-sys = { version = "0.4", default-features = true }

[[bin]]
name = "fuzz_lxmf_message_decode"
path = "fuzz_targets/fuzz_lxmf_message_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rns_packet_decode"
path = "fuzz_targets/fuzz_rns_packet_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rns_packet_hash"
path = "fuzz_targets/fuzz_rns_packet_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rns_announce_decode"
path = "fuzz_targets/fuzz_rns_announce_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_token_decrypt"
path = "fuzz_targets/fuzz_token_decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_single_packet_decrypt"
path = "fuzz_targets/fuzz_single_packet_decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ifac_verify"
path = "fuzz_targets/fuzz_ifac_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_kiss_decoder"
path = "fuzz_targets/fuzz_kiss_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rnode_command_parser"
path = "fuzz_targets/fuzz_rnode_command_parser.rs"
test = false
doc = false
bench = false

[workspace]
