[package]
name = "hyf_bridge_nostr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyf_bridge_core.workspace = true
hyf_core.workspace = true
hyf_link_nostr.workspace = true

[features]
default = []
std = ["hyf_bridge_core/std", "hyf_core/std", "hyf_link_nostr/std"]

[lints]
workspace = true
