[package]
name = "hyf_gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyf_config.workspace = true
hyf_core.workspace = true
hyf_link.workspace = true
hyf_link_fips.workspace = true
hyf_link_loopback.workspace = true
hyf_link_nostr.workspace = true
hyf_router.workspace = true
hyf_store.workspace = true
hyf_wire.workspace = true

[dev-dependencies]
hyf_bitchat_core = { workspace = true, features = ["std"] }
hyf_bridge_bitchat = { workspace = true, features = ["std"] }
hyf_bridge_core = { workspace = true, features = ["std"] }
hyf_bridge_lxmf = { workspace = true, features = ["std"] }
hyf_bridge_nostr = { workspace = true, features = ["std"] }
hyf_bridge_runtime = { workspace = true, features = ["std"] }
hyf_link_bitchat = { workspace = true, features = ["std"] }
hyf_link_kiss = { workspace = true, features = ["std"] }
hyf_link_lxmf = { workspace = true, features = ["std"] }
hyf_link_rnode_serial = { workspace = true, features = ["std"] }
hyf_link_rns = { workspace = true, features = ["std"] }
hyf_lxmf_core = { workspace = true, features = ["std"] }
hyf_wire = { workspace = true, features = ["std"] }

[features]
default = []
std = []

[lints]
workspace = true
