[package]
name = "hyf_link_lxmf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyf_core.workspace = true
hyf_lxmf_core.workspace = true
hyf_wire.workspace = true

[features]
default = []
std = []

[lints]
workspace = true
