[package]
name = "hyf_link_nostr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
k256.workspace = true

[features]
default = []
alloc = []
std = ["alloc"]
test_vectors = []

[lints]
workspace = true
