[package]
name = "hyf_link_nostr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyf_wire.workspace = true
k256.workspace = true
sha2.workspace = true
zeroize.workspace = true

[dev-dependencies]
hyf_core.workspace = true

[features]
default = []
alloc = []
std = ["alloc"]
test_vectors = []

[lints]
workspace = true
