[package]
name = "hyf_link_rnode"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyf_link_kiss.workspace = true
serialport = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
alloc = []
std = ["alloc"]
rnode = []
hil_std = ["std", "dep:serialport"]

[lints]
workspace = true
