[package]
name = "hyf_link_rnode_serial"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyf_core.workspace = true
hyf_link.workspace = true
hyf_link_kiss.workspace = true
hyf_link_rnode.workspace = true

[features]
default = []
alloc = []
std = ["alloc"]

[lints]
workspace = true
