[package]
name = "hyf_link_rnode_serial"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyf_core.workspace = true
hyf_link.workspace = true
hyf_link_kiss.workspace = true
hyf_link_rnode.workspace = true
hyf_link_rns.workspace = true
hyf_wire.workspace = true
serialport = { workspace = true, optional = true }

[features]
default = []
alloc = []
serialport_runtime = ["dep:serialport", "std"]
std = ["alloc"]

[lints]
workspace = true
