[package]
name = "hyf_lxmf_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sha2.workspace = true

[features]
default = []
alloc = []
std = ["alloc"]

[lints]
workspace = true
