[package]
name = "hyf_rns_conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
hyf_rns_core.workspace = true
hyf_rns_crypto = { workspace = true, features = ["crypto_x25519"] }
hyf_rns_wire.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "profile0"
harness = false

[features]
default = []
python_oracle = []

[lints]
workspace = true
