[package]
name = "hyf_rns_crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ed25519-dalek.workspace = true
hyf_rns_core.workspace = true
x25519-dalek = { workspace = true, optional = true }
zeroize.workspace = true

[features]
default = []
alloc = []
std = ["alloc"]
serde = []
defmt = []
test_vectors = []
crypto_token = []
crypto_x25519 = ["crypto_token", "dep:x25519-dalek"]

[lints]
workspace = true
