[package]
name = "hyf_rns_crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aes = { workspace = true, optional = true }
cbc = { workspace = true, optional = true }
ed25519-dalek.workspace = true
hkdf = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
hyf_rns_core.workspace = true
rand_core = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
x25519-dalek = { workspace = true, optional = true }
zeroize.workspace = true

[features]
default = []
alloc = []
std = ["alloc"]
serde = []
defmt = []
test_vectors = []
crypto_hkdf = ["dep:hkdf", "dep:hmac", "dep:sha2"]
crypto_token = ["crypto_hkdf", "dep:aes", "dep:cbc", "dep:rand_core"]
crypto_x25519 = ["crypto_token", "dep:x25519-dalek"]

[lints]
workspace = true
