[package]
name = "hyf_rns_wire"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyf_rns_core.workspace = true
hyf_rns_crypto.workspace = true
rand_core.workspace = true

[dev-dependencies]
allocation-counter.workspace = true

[features]
default = []
alloc = []
std = ["alloc"]
serde = []
defmt = []
ifac = ["hyf_rns_crypto/crypto_token"]

[lints]
workspace = true
