[package]
name = "hyf_store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hyf_core.workspace = true
hyf_wire.workspace = true

[features]
default = []
alloc = []
std = ["alloc"]

[lints]
workspace = true
